--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,js,json,css,md}'"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.5",
+    "autoprefixer": "^10.4.21",
+    "graphql": "^16.10.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -22,9 +26,8 @@
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.7.4",
+    "css-loader": "^6.11.0",
     "eslint": "^8.50.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -35,13 +38,13 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
-    "postcss": "^8.4.27",
-    "postcss-loader": "^7.2.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.1.0",
     "sass": "^1.70.0",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^4.0.17",
     "ts-loader": "^9.4.1",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
@@ -52,5 +55,6 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "packageManager": "yarn@4.8.0"
 }
