--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@apollo/client": "^3.13.5",
     "autoprefixer": "^10.4.21",
     "graphql": "^16.10.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
